Modify semantic related api to use same response model as search
